<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFF4"
    android:orientation="vertical" >

    <include
        android:id="@id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        layout="@layout/title_bar" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_margin="10dp"
        android:background="@drawable/edittext_border_blue"
        android:hint="@string/name_hint"
        android:padding="10dp" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/edittext_border_blue"
        android:hint="@string/phone_hint"
        android:inputType="phone"
        android:padding="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/code"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/edittext_border_blue"
            android:hint="@string/code_hint"
            android:padding="10dp" />

        <Button
            android:id="@+id/get_code_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_bg_blue"
            android:padding="5dp"
            android:text="@string/get_code"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/reservation_service_type"
        android:textColor="@color/color_222"
        android:textSize="@dimen/size16" />

    <RadioGroup
        android:id="@+id/reservation_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/service_wall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_666666"
            android:text="@string/service_wall" />

        <RadioButton
            android:layout_marginTop="5dp"
            android:id="@+id/service_wallpaper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_666666"
            android:text="@string/service_wallpaper" />

        <RadioButton
            android:layout_marginTop="5dp"
            android:id="@+id/service_floor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_666666"
            android:text="@string/service_floor" />
    </RadioGroup>

    <Button
        android:id="@+id/reservation_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_bg_yello"
        android:padding="10dp"
        android:text="@string/reservation_btn"
        android:textColor="#FFFFFF"
        android:textSize="14sp" />

</LinearLayout>